<resources>
    <string name="app_name">ACNH Companion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_placeholder">User Name</string>
    <string name="fish_obtained">Fish Obtained: </string>
    <string name="bugs_obtained">Bugs Obtained: </string>
    <string name="seacreatures_obtained">SeaCreatures Obtained: </string>
    <string name="catchable_fish">Current Catchable Fish:</string>
    <string name="catchable_bugs">Current Catchable Bugs:</string>
    <string name="catchable_seacreatures">Current Catchable SeaCreatures:</string>
    <string name="friend_code">Friend Code:</string>
    <string name="username">Username:</string>
    <string name="logout">Logout</string>
    <string name="bugs_placeholder">Bugs Placeholder</string>
    <string name="fish_placeholder">Fish Placeholder</string>
    <string name="unavailable">Unavailable</string>
    <string name="sell_price">%s Bells</string>
    <string name="mark_caught">Mark Caught</string>
    <string name="mark_not_caught">Mark Not Caught</string>
    <string name="email">Email…</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email_pass_blank">Email and Password fields are required to login.</string>
    <string name="login_unsuccessful">Login unsuccessful</string>
    <string name="login_successful">Login successful</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="northern_hemisphere">Northern Hemisphere</string>
    <string name="southern_hemisphere">Southern Hemisphere</string>
    <string name="save_information">Save Information</string>
    <string name="settings">Settings</string>
    <string name="cosmos">Cosmos</string>
    <string name="roses">Roses</string>
    <string name="lilies">Lilies</string>
    <string name="pansies">Pansies</string>
    <string name="hyacinths">Hyacinths</string>
    <string name="mums">Mums</string>
    <string name="tulips">Tulips</string>
    <string name="windflowers">Windflowers</string>
    <string name="still_needed_for_this_month">Still needed for this month:</string>
    <string name="caught">Caught:</string>
    <string name="not_caught">Not Caught:</string>
    <string name="speed">Speed:</string>
    <string name="title_activity_login_compose">LoginComposeActivity</string>
</resources>