<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/acnh_bg"
    tools:context=".ui.activities.RegisterActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailET"
        android:layout_margin="5dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:maxLength="14"
        android:padding="10dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passwordConfirmET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordET"
        android:layout_margin="5dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="14"
        android:padding="10dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button"
        android:onClick="registerUser"
        android:text="@string/register" />

    <ProgressBar
        android:id="@+id/registerPB"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>